# scigym-neurips

./: .gitignore  README.md  download.py  example.env  pyproject.toml
configs/: config.yml
plots/: README.md  old_vs_new_simulation_times.py  perturb_mm.py  question_filtering.py  utils.py
scigym/: __init__.py  api.py  code.py  constants.py  controller.py  customized_functions.py  evaluator.py  exceptions.py  experiment.py  llm.py  main.py  question.py  sbml.py  simulator.py  utils.py
scigym/preprocess/: filter_biomodels.py  find_simul_time.py  main.py  preprocess_models.py  prompt_experimental_constraints.md  prompt_research_question.md  run.sh  utils.py
scigym/sbmlutils/: basico_opt.py  getPlugins.py  sbmldiagram.py  scrambleIds.py  validateSBML.py
scigym/system_prompts/: experiment_actions_knockout.md  experiment_actions_perturb.md  template.md  template_memorize.md
